# FaceDetect

./: .gitignore  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/io/github/jesterz91/opcvapplication/: DetectActivity.kt  MainActivity.java
app/src/main/res/layout/: activity_detect.xml  activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: local.properties
